fixed alignment & text color
alignment was off in mobile, also text color needed to be updated

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,9 +41,15 @@ header div {
 .logo-image {
     max-width: 300px;
 }
+header h2 {
+    margin-right: auto;
+    font-size: 200%;
+    margin: auto 0;
+}
 main {
     width: 100%;
     height: 100%;
+    color: rgb(152, 209, 247);
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
@@ -52,14 +58,6 @@ main {
 }
 main div {
     margin-bottom: .25em;
-}
-header h2 {
-    margin-right: auto;
-    font-size: 200%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
 }
 .countdown {
     display: flex;
@@ -111,44 +109,23 @@ footer {
         max-width: 100%;
         height: auto;
     }
+    header div {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    header div h2 {
+        text-align: center;
+    }
     main {
         flex-direction: column;
         gap: 0;    
         justify-content: center;
         align-items: stretch;
     }
-    .big-text {
-        font-size: 150%;
-    }
     .logo-image {
         margin: .5em;
     }
-    .countdown {
-        order: 1;
-    }
-    .weather {
-        order: 2;
-    }
-    .activities {
-        align-items: stretch;
-    }
-    .activity {
-        border: none;
-        border-radius: 0;
-        border-top: 3px solid black;
-        border-bottom: 3px solid black;
-        margin-bottom: .75em;
-    }
-    .activity-image {
-        max-width: 100%;
-        margin: 0;
-    }
-    .modal {
-        padding-top: 100px;
-    }
-    .modal-content {
-        width: 100%;
-      }
     footer {
         position: relative;
     }
@@ -156,8 +133,5 @@ footer {
 @media (max-width: 300px) {
     body {
         font-size: 85%;
-    }
-    .big-text {
-        font-size: 100%;
     }
 }
